# flang-dumper

./: .gitignore  CMakeLists.txt  Dumper Status.xlsx  Grammar.xlsx  README.md  fujitsu.py
.github/workflows/: mirror-to-gitlab.yml  nightly.yml  pr_build.yml
scripts/: extract_flang_nodes.py  install-dependencies-macos.sh  install-dependencies.sh  llvm-macos.sh  llvm.sh  setup.sh
src/: collector.h  plugin.cpp  plugin.h
